fix: fix colors on chat ui dark mode (#1764)

--- a/CopilotKit/packages/react-ui/src/css/window.css
+++ b/CopilotKit/packages/react-ui/src/css/window.css
@@ -25,6 +25,7 @@
 }
 
 .poweredBy {
+  background: var(--copilot-kit-background-color) !important;
   visibility: visible !important;
   display: block !important;
   position: static !important;
